[gd_scene load_steps=4 format=3 uid="uid://e2fkhon8pqp2"]

[ext_resource type="Script" uid="uid://dfiri3661uhpn" path="res://quests/widgets/QuestStep.gd" id="1_0ibjt"]
[ext_resource type="FontFile" uid="uid://dmphmomidbb4l" path="res://addons/fontawesome/fonts/fa-solid-900.woff2" id="2_k0x6f"]
[ext_resource type="Script" uid="uid://d4eswivtt24yr" path="res://addons/fontawesome/FontAwesome.gd" id="3_5skkf"]

[node name="QuestStep" type="Panel"]
custom_minimum_size = Vector2(200, 0)
offset_right = 509.0
offset_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_0ibjt")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FontAwesome" type="Label" parent="HBoxContainer"]
auto_translate_mode = 2
visible = false
layout_mode = 2
localize_numeral_system = false
theme_override_fonts/font = ExtResource("2_k0x6f")
theme_override_font_sizes/font_size = 16
text = "ÔÅò"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("3_5skkf")
icon_name = "circle-check"
metadata/_custom_type_script = "uid://d4eswivtt24yr"

[node name="StepTextLabel" type="RichTextLabel" parent="HBoxContainer"]
unique_name_in_owner = true
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 10
bbcode_enabled = true
text = "blue apple [color=green]0[/color]/1"
fit_content = true
scroll_active = false
vertical_alignment = 1
